--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
 "name": "Create React App Sample",
 "icons": [
   {
-    "src": "../src/Assets/Nlogo.png",
+    "src": "./favicon.ico",
     "sizes": "16x16" ,
     "type": "image/x-icon"
   },
